fix(scroll): Hid scrollbar

--- a/app/src/client/ui/styles/base/_reset.scss
+++ b/app/src/client/ui/styles/base/_reset.scss
@@ -1,5 +1,10 @@
 html {
   overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
